--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "The true sign of intelligence is not knowledge but imagination."
 ---
 
 {% for post in paginator.posts %}
