--- a/about.html
+++ b/about.html
@@ -21,14 +21,14 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>Hello, I am <strong>Maggie Xheuw </strong>，phd，from Westlake University.</p>
 
-    <p></p>
+    
 
     <p>This is my personal blog built by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> 
-        Looking forward to communicating with you.
+        Looking forward to communicating with you. <p>
 
     <p></p>
     
-    <h5>Talk s</h5>
+    <h5>Talks</h5>
 
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
