--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ header-img: "img/post-bg-rwd.jpg"
     
 
     <p>This is my personal blog built by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> 
-        Looking forward to communicating with you. <p>
+        Looking forward to communicating with you. </p>
 
     <p></p>
     
