--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@ header-img: "img/post-bg-rwd.jpg"
 
     
 
-    <p>This is my personal blog built by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> 
+    <p>This is my personal blog built by <a href="https://pages.github.com/" >GitHub Pages
+    </a> and <a href="http://jekyll.com.cn/">Jekyll</a> 
         Looking forward to communicating with you. </p>
 
     <p></p>
