--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@ header-img: "img/post-bg-rwd.jpg"
         There's plenty of room at bottom -- Richard Feymann
     </p></blockquote>
 
-    <p>Hello, I am <strong>Maggie Xheuw </strong>，phd，from Westlake University.</p>
+    <p>Hello, I am <strong>Maggie Xheuw </strong>，phd from Westlake University.</p>
 
     
 
     <p>This is my personal blog built by <a href="https://pages.github.com/" >GitHub Pages
     </a> and <a href="http://jekyll.com.cn/">Jekyll</a> 
-        Looking forward to communicating with you. </p>
+      Looking forward to communicating with you. </p>
 
     <p></p>
     
