--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Maggie Xheuw's Blog."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
